@@ -1,69 +1,84 @@
-package com.example.eduwheels.Config;
+package com.example.eduwheels.Config; // Adjust package name as needed
 
 import com.example.eduwheels.Entity.UserEntity;
-import com.example.eduwheels.Repository.UserRepository;
+import com.example.eduwheels.Service.GoogleOAuth2UserService;
+import com.example.eduwheels.Utils.JwtAuthenticationFilter;
+import com.example.eduwheels.Utils.JwtUtil;
+import jakarta.servlet.http.HttpSession; // Import HttpSession
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod; // Import HttpMethod
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder; // Import BCrypt
+import org.springframework.security.crypto.password.PasswordEncoder; // Import PasswordEncoder
 import org.springframework.security.oauth2.client.authentication.OAuth2AuthenticationToken;
 import org.springframework.security.oauth2.core.user.OAuth2User;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.security.crypto.factory.PasswordEncoderFactories;
+import org.springframework.security.crypto.password.PasswordEncoder;
+import com.example.eduwheels.Handler.CustomOAuth2SuccessHandler;
 
 import java.util.Arrays;
+import java.util.HashMap; // Import HashMap
+import java.util.List;
+import java.util.Map; // Import Map
 
 @Configuration
+@EnableWebSecurity
 public class SecurityConfig {
-    private final UserRepository userRepository;
 
-    // Constructor injection for UserRepository
-    public SecurityConfig(UserRepository userRepository) {
-        this.userRepository = userRepository;
+    @Autowired
+    private GoogleOAuth2UserService googleOAuth2UserService;
+
+    @Autowired
+    private JwtAuthenticationFilter jwtAuthenticationFilter;
+
+    @Autowired
+    private JwtUtil jwtUtil;
+
+    @Autowired
+    private CustomOAuth2SuccessHandler customOAuth2SuccessHandler;
+
+    // Key to store temporary user details in the HTTP session
+    public static final String PENDING_OAUTH2_USER_ATTRIBUTE_KEY = "pendingOAuth2UserDetails";
+
+    // --- Define PasswordEncoder Bean ---
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return PasswordEncoderFactories.createDelegatingPasswordEncoder();
     }
+    // ---
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                .cors().and()
-                .csrf().disable()
-                .authorizeRequests(auth -> auth
-                        .requestMatchers(
-                                "/", "/login**", "/error",
-                                "/users/signup", "/users/login", "/users/google-login"
-                        ).permitAll()
+                .csrf(csrf -> csrf.disable())
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .sessionManagement(session -> session
+                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS) // no sessions for JWT
+                )
+                .authorizeHttpRequests(authz -> authz
+                        .requestMatchers("/users/login", "/users/signup", "/oauth2/**", "/complete-profile").permitAll()
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                         .anyRequest().authenticated()
                 )
-                .httpBasic().disable()
-                .oauth2Login()
-                .loginPage("/login")
-                .successHandler((request, response, authentication) -> {
-                    OAuth2AuthenticationToken authToken = (OAuth2AuthenticationToken) authentication;
-                    OAuth2User user = authToken.getPrincipal();
-
-                    String email = user.getAttribute("email");
-                    String firstName = user.getAttribute("given_name");
-                    String lastName = user.getAttribute("family_name");
-
-                    UserEntity existingUser = userRepository.findByEmail(email).orElse(null);
-                    UserEntity userEntity;
-
-                    if (existingUser == null) {
-                        userEntity = new UserEntity();
-                        userEntity.setEmail(email);
-                        userEntity.setFirstName(firstName);
-                        userEntity.setLastName(lastName);
-                        userRepository.save(userEntity);
-
-                        response.sendRedirect("http://localhost:3000/complete-profile?userId=" + userEntity.getUserid());
-                    } else {
-                        response.sendRedirect("http://localhost:3000/logged-in");
-                    }
-                })
-                .failureHandler((request, response, exception) -> {
-                    response.sendRedirect("/login?error=true");
-                });
+                .oauth2Login(oauth2 -> oauth2
+                        .loginPage("/login")
+                        .successHandler(customOAuth2SuccessHandler)
+                        .failureHandler((request, response, exception) -> {
+                            response.sendRedirect("http://localhost:3000/login?error=oauth_failed");
+                        })
+                )
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
+                .formLogin(form -> form.disable())
+                .httpBasic(basic -> basic.disable());
 
         return http.build();
     }
@@ -71,13 +86,13 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000"));  // Specify React frontend origin
+        configuration.setAllowedOrigins(List.of("http://localhost:3000"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setAllowCredentials(true);  // Allow credentials (cookies, headers)
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);  // Apply the CORS configuration to all paths
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 }
